Version 3.5.x (2012-xx-xx)
	Added missing wbr element to HTML5 schema.
	Fixed bug where the editor would get auto focused on IE running in quirks mode.
	Fixed bug where pressing enter before an IMG or INPUT element wouldn't properly split the block.
	Fixed bug where backspace would navigate back when selecting control types on IE.
Version 3.5.2 (2012-05-31)
	Added new formatChanged method to tinymce.Formatter class. Enables easier state change handling of formats.
	Added new selectorChanged method to tinymce.dom.Selection class. Enables easier state change handling of matching CSS selectors.
	Changed the default theme to be advanced instead of simple since most users uses the advanced theme.
	Changed so the theme_advanced_buttons doesn't have a default set if one button row is specified.
	Changed the theme_advanced_toolbar_align default value to "left".
	Changed the theme_advanced_toolbar_location default value to "top".
	Changed the theme_advanced_statusbar_location default value to "bottom".
	Fixed bug where the simple link dialog would remove class and target attributes from links when updating them if the drop downs wasn't visible.
	Fixed bug where the link/unlink buttons wouldn't get disabled once a link was created by the autolink plugin logic.
	Fixed bug where the border attribute was missing in the HTML5 schema.
	Fixed bug where the legacyoutput plugin would use inline styles for font color.
	Fixed bug where editing of anchor names wouldn't produce an undo level.
	Fixed bug where the table plugin would delete the last empty block element in the editor.
	Fixed bug where pasting table rows when they where selected would make it impossible to editor that table row.
	Fixed bug with pressing enter in IE while having a select list focused would produce a JS error.
	Fixed bug where it wasn't possible to merge table cells by selecting them and using merge from context menu.